# api.f4n.dev

./: Cargo.toml  Dockerfile
asset/: career.yaml
asset/blog/: my-favorite-blog.md  registry.yaml
src/: di.rs  logger.rs  main.rs  server.rs  service.rs
src/controller/: basic.rs  mod.rs
src/domain/: basic.rs  blog.rs  career.rs  contact.rs  mod.rs  skill.rs  work.rs
src/repository/: frontmatter.rs  loxygenk_d.rs  mock.rs  mod.rs  util.rs
src/router/: mod.rs
src/server/: exec.rs  host.rs  mod.rs
src/service/: basic.rs  mod.rs  state.rs
