[package]
name = "flisan_portfolio_api"
version = "0.1.0"
authors = ["loxygenk <me@loxygen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
juniper = "0.15.7"
juniper_warp = "0.7.0"
tokio = { version = "1.11.0", features = ["macros"] }
warp = "0.3.1"
