[package]
name = "flisan_portfolio_api"
version = "0.1.0"
authors = ["loxygenk <me@loxygen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
juniper = "0.15.7"
juniper_warp = "0.7.0"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["blocking"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
tokio = { version = "1.11.0", features = ["macros"] }
ureq = "2.3.0"
warp = "0.3.1"
